re-parse-proc-macro/src/snapshots/re_parse_proc_macro__nfa__tests__duplicate_variable.snap
---
source: re-parse-proc-macro/src/nfa.rs
expression: "parse(\"{foo}bar{foo}\")"
snapshot_kind: text
---
Err(
    Nfa(
        DuplicateVariable {
            name: "foo",
        },
    ),
)
